--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Index</title>
+    <meta charset="UTF-8">
+    <title>صفحه اصلی</title>
 </head>
 <body>
-	<h1 align="center">INDEX</h1>
+    <h1 align="center">صفحه اصلی</h1>
 </body>
 </html>
