--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav collapse navbar-collapse" >
 
+
                             <li><a href="ShopingTutorial.html" c>راهنمای خرید</a></li>
 
 
@@ -113,12 +114,20 @@
                         </ul>
                         <ul class="nav navbar-nav">
                             <li><a href="#"><i class="fa fa-user"></i> حساب</a></li>
-                            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> سبد خرید</a></li>
+
+
+
                             <li><a href="login.html"><i class="fa fa-lock"></i> ورود</a></li>
                         </ul>
+                        <a href="cart.html" type="button" class="btn btn-success btn-lg" style="margin-left: 20px" >
+                            <span class="glyphicon glyphicon-shopping-cart"></span> سبد خرید
+                            <span class="badge badge-notify">3</span>
 
+                        </a>
                     </div>
+
                 </div>
+
             </div>
         </div>
     </div><!--/header-middle-->
@@ -146,7 +155,7 @@
 
 </header><!--/header-->
 <section id="slider"><!--slider-->
-    <div class="container">
+    <div class="container" >
 
 
         <div class="row">
@@ -1060,12 +1069,14 @@
         </div>
     </div>
 </footer><!--/Footer-->
+
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.scrollUp.min.js"></script>
 <script src="js/price-range.js"></script>
 <script src="js/jquery.prettyPhoto.js"></script>
 <script src="js/main.js"></script>
+
 
 
 
