--- a/index.html
+++ b/index.html
@@ -174,12 +174,14 @@
                             <div class="col-sm-6" dir="rtl">
                                 <h1><span>KURD</span>-KALA</h1>
                                 <p>فروشگاه آنلاین </p>
-                                <p>توضیحات مربوط به این کالا </p>
+                                <p>فروش ویژه عید محصولات ساسونگ.
+                                    تلویزیون های خمیده</p>
+
                                 <button type="button" class="btn btn-default get">سفارش</button>
                             </div>
                             <div class="col-sm-6">
                                 <img src="images/home/girl1.jpg" class="girl img-responsive" alt="" />
-                                <img src="images/home/pricing.png"  class="pricing" alt="" />
+
                             </div>
                         </div>
                         <div class="item">
@@ -187,7 +189,7 @@
                                 <h1><span>KURD</span>-KALA</h1>
                                 <p>فروشگاه آنلاین </p>
                                 <p>توضیحات مربوط به این کالا </p>
-                                <button type="button" class="btn btn-default get">سفارش</button>
+                                <button type="button" class="btn btn-default get"><?php echo "moeid jan";?></button>
                             </div>
                             <div class="col-sm-6">
                                 <img src="images/home/girl2.png" class="girl img-responsive" alt="" />
@@ -204,7 +206,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <img src="images/home/girl3.png" class="girl img-responsive" alt="" />
-                                <img src="images/home/pricing.png" class="pricing" alt="" />
+
                             </div>
                         </div>
 
