--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/price-range.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">  
+    <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -51,7 +51,7 @@
                 <div class="col-sm-6">
                     <div class="social-icons pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#" style="margin-right: 50px;margin-top: 10px"><i ></i>کالای مورد نظرتان را جستجو کنید</a></li>
+
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -113,7 +113,7 @@
                             <li><a href="index.html" class="active" >خانه</a></li>
                         </ul>
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-user"></i> حساب</a></li>
+                            <li><a href="checkout.html"><i class="fa fa-user"></i> حساب</a></li>
 
 
 
