--- a/cart.html
+++ b/cart.html
@@ -14,10 +14,9 @@
     <link href="css/animate.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
-	<script src="jquery-1.12.2.min.js"></script>
+	<script src="js/jquery-1.12.2.min.js"></script>
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
 
     <![endif]-->       
     <link rel="shortcut icon" href="images/ico/favicon.ico">
