--- a/Login.html
+++ b/Login.html
@@ -80,7 +80,7 @@
 			<div class="row" >
 				<div class="col-sm-4">
 					<div class="logo pull-left">
-						<a href="index.html"><img src="images/home/logo.png" alt="" /></a>
+						<a href="panel/index.php"><img src="images/home/logo.png" alt="" /></a>
 					</div>
 					<div class="btn-group pull-left">
 						<div class="btn-group" style="margin-top: 5px">
@@ -117,7 +117,7 @@
 								</ul>
 
 							</li>
-							<li><a href="index.html" class="active" >خانه</a></li>
+							<li><a href="panel/index.php" class="active" >خانه</a></li>
 						</ul>
 						<ul class="nav navbar-nav">
 							<li><a href="#"><i class="fa fa-user"></i> حساب</a></li>
